--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: mli <marvin@42.fr>                         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/10/07 17:22:00 by mli               #+#    #+#              #
-#    Updated: 2020/01/03 20:52:10 by mli              ###   ########.fr        #
+#    Updated: 2020/01/04 17:29:15 by mli              ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,10 +16,10 @@ CC = gcc
 
 CFLAGS = -Wall -Wextra -Werror
 
-SRCS_FILES = ft_memset.c ft_bzero.c ft_strlen.c \
-			 ft_strchr.c ft_strrchr.c ft_strncmp.c ft_strlcpy.c \
-			 ft_strnstr.c ft_atoi.c \
-			 ft_memcpy.c ft_memccpy.c ft_memmove.c \
+SRCS_FILES = ft_memset.c ft_bzero.c ft_strlen.c ft_toupper.c ft_tolower.c\
+			 ft_strchr.c ft_strrchr.c ft_strncmp.c ft_strlcpy.c ft_strlcat.c \
+			 ft_strnstr.c ft_atoi.c ft_isalpha.c ft_isdigit.c ft_isalnum.c \
+			 ft_isascii.c ft_isprint.c ft_memcpy.c ft_memccpy.c ft_memmove.c \
 			 ft_memchr.c ft_memcmp.c ft_calloc.c ft_strdup.c ft_substr.c \
 			 ft_strtrim.c ft_strjoin.c ft_split.c ft_itoa.c ft_strmapi.c \
 			 ft_lstnew.c ft_lstadd_front.c ft_lstlast.c ft_lstadd_back.c \
