--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: mli <marvin@42.fr>                         +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/10/07 17:22:00 by mli               #+#    #+#              #
-#    Updated: 2020/01/28 10:43:25 by mli              ###   ########.fr        #
+#    Updated: 2020/03/02 17:40:45 by mli              ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -31,7 +31,12 @@ SRCS_FILES = ft_memset.c ft_bzero.c ft_strlen.c ft_toupper.c ft_tolower.c\
 OBJS = ${SRCS_FILES:.c=.o}
 
 $(NAME): ${OBJS} 
-	ar rcs ${NAME} ${OBJS}
+	@echo ""
+	@ar rcs ${NAME} ${OBJS}
+
+.c.o:
+	@${CC} ${CFLAGS} -c $< -o ${<:.c=.o}
+	@printf "\033[0;33m▓\033[0;0m"
 
 all: ${NAME}
 
