--- a/minilibx_opengl_20191021/Makefile
+++ b/minilibx_opengl_20191021/Makefile
@@ -11,7 +11,9 @@ CFLAGS+=-O2
 # add to match string put with X11 in size and position
 CFLAGS+= -DSTRINGPUTX11
 
-all: $(NOM)
+all:
+	@printf "\033[1mMake mlx\033[0m : "
+	@make ${NOM}
 
 $(NOM):	$(OBJ)
 	@echo ""
